<resources>
    <string name="app_name">The Dinner Club</string>
    <string name="email_hint">email</string>
    <string name="password_hint" translatable="false">password</string>
    <string name="tv_login">Log in</string>
    <string name="btn_register">Register</string>
    <string name="required_string">is required</string>
    <string name="not_valid_string">is not valid</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_create_dinner_club">Create New Dinner Club</string>
    <string name="city_hint">City</string>
    <string name="name_hint">Member name</string>
    <string name="phone_hint">Phone</string>
    <string name="street_hint">Street name + nr.</string>
    <string name="zip_hint">Zip code</string>
    <string name="notification_title">Dinner Club Service</string>
    <string name="notification_text">The Dinner Club Service is keeping you updated with new dinners and other changes from your dinner club friends.</string>
    <string name="create_dc_dialog_title">Enter the name of your dinner club</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="no_input_error_string">Dinner club not created. You must provide a name.</string>
    <string name="cancelled_string">Cancelled</string>
    <string name="loading_user_string">Loading user…</string>
    <string name="loading_dc_string">Loading dinner club…</string>
    <string name="create_failure_string">Creating Dinner Club Failure</string>
    <string name="btn_add_members">Add members</string>
    <string name="collision_string">The email address is already in use by another account.</string>
    <string name="invite_member_title">Enter email to invite new member</string>
    <string name="invite">Invite</string>
    <string name="no_input_email_string">Invitation not sent. You must provide an email to invite member.</string>
    <string name="not_valid_email_string">Make sure the email is valid.</string>
    <string name="connection_error_string">Connection error. Invitation not sent.</string>
    <string name="has_club_inv_not_sent_string">already has a dinner club. Invitation NOT sent.</string>
    <string name="invitation_sent_string">Dinner club invitation is sent to</string>
    <string name="invitation_not_sent_string">Error: the dinner club invitation was not sent.</string>
    <string name="user_not_exist">is not a Dinner Club user. Invitation not sent</string>
    <string name="loading_dc_inv_string">Loading dinner club invitation</string>
    <string name="club_inv_title">Dinner Club Invitation</string>
    <string name="invite_text">invites you to join their dinner club:</string>
    <string name="will_u_join_string">. Do you wish to join?</string>
    <string name="join">Join</string>
    <string name="no">No</string>
    <string name="invitation_not_deleted_string">Error: The invitation was not deleted.</string>
    <string name="btn_create_dinner">New Dinner</string>
    <string name="create_dinner_title">Create Dinner</string>
    <string name="date_time_hint">Date and time (yyyy-MM-dd hh:mm)</string>
    <string name="message_hint">Message...</string>
    <string name="create_error_string">Error, dinner NOT created.</string>
    <string name="dinner_created_string">Dinner is created</string>
    <string name="dinner_not_created_string">Error, dinner was not created.</string>
    <string name="dinneritem_dinner_at">Dinner at</string>
    <string name="uri_hint">Image URL</string>
    <string name="dinner_string">Dinner</string>
    <string name="host">Host:</string>
    <string name="date_string">Date:</string>
    <string name="address_text">Address:</string>
    <string name="phone_string">Phone:</string>
    <string name="email_string">Email:</string>
    <string name="message_string">Message:</string>
    <string name="back">Back</string>
    <string name="loaded_user">Loaded user:</string>
    <string name="auth_failed">Authentication failed.</string>
</resources>
